# Agent_backend

./: .gitignore  CLAUDE.md  README.md
backend/python-daemon/: Invoke-AletheiaTool.ps1  pyproject.toml
backend/python-daemon/orchestrator/: __init__.py  adapters.py  admin.py  agent_workflow_cli.py  approval.py  bridge_server.py  chroma_manager.py  config.py  dag_runtime.py  db_bootstrap.py  epistemic.py  execution_loop.py  hitl.py  lm_studio_manager.py  lmstudio_connection.py  main.py  observability.py  ocr.py  queue_repo.py  recovery.py  reroll.py  runtime.py  shell.py  tool_assist_adapter.py  worker.py
backend/python-daemon/tests/: test_active_memory_tools.py  test_active_partition_mapper.py  test_active_partition_repo.py  test_active_partition_watcher.py  test_agent_workflow.py  test_agent_workflow_mcp.py  test_approval.py  test_approval_policy.py  test_artifact_writer.py  test_bridge_server.py  test_candidate_analysis_mode.py  test_capability_receipt.py  test_capability_registry.py  test_chroma_and_ingest.py  test_code_intelligence.py  test_code_review_heuristics.py  test_code_review_report.py  test_conversation_summary_ingest.py  test_dag_runtime.py  test_db_and_dag.py  test_deep_research.py  test_deep_research_adapter.py  test_drafting_policy.py  test_epistemic_and_reroll.py  test_execution_loop_adapters.py  test_fastmcp_shim_tools.py  test_hitl_and_shell.py  test_integrations.py  test_lmstudio_connection.py  test_memory_service.py  test_patch_admin_cli.py  test_patch_apply_and_test.py  test_patch_generation.py  test_pipeline_compiler.py  test_research_models.py  (+12 more)
(+217 files in other folders)
