[project]
name = "aletheia-orchestrator"
version = "0.1.0"
requires-python = ">=3.11"
description = "Authoritative Python daemon for the Aletheia agentic orchestrator."
dependencies = [
  "chromadb",
  "requests",
  "PyMuPDF",
  "PyYAML",
  "jsonschema",
]

[project.optional-dependencies]
ocr = []
live = []

[project.scripts]
aletheia-daemon = "orchestrator.main:main"
aletheia-admin = "orchestrator.admin:main"

[tool.pytest.ini_options]
pythonpath = ["."]
